Sec9_Chap103-JPA-Save New Beer: misc. optimizations